--- a/templates/risultati.html
+++ b/templates/risultati.html
@@ -3,13 +3,25 @@
 
 
 <div class="container">
-<table>
             <h2>Manoscritto </h2>
 
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Descrizione</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                </li>
+              </ul>
 
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            
             {% for index, field in descrizione.iterrows() %}
-    		
-            <h3>Descrizione Esterna</h3><br>
+        <table>
            <tr>
             <tr><td><b>Segnatura: </b></td><td>{{field.Segnatura}}</td></tr>
             <tr><td><b>Datazione: </b></td><td>{{field.datazione}}</td></tr>
@@ -25,9 +37,15 @@
             <tr><td><b>Legatura: </b></td><td>{{field.legatura}}</td></tr>
             <tr><td><b>Utente: </b></td><td>{{field.utenti_email}}</td></tr>
             <tr><td><b>Palinsesto: </b></td><td>{{field.Descrizione_Esterna_Segnatura}}</td></tr>
-
-            {% endfor %}
         </table>
+            {% endfor %}
+        
+            </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <tr><td><b>Segnatura: </b></td><td>placehoder</td></tr>
+    </div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+  </div>
 </div>
 
 {% endblock body %}
