create nuova navbar corretto template ricerca

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,15 +17,8 @@ body {
 }
 </style>
 </head>
-<body>
-<br>
-<br>
-<br>
-<div align="center">
-<br>
-</div>
 <!--         NAVBAR        -->
-{% include 'includes/navbar.html' %}
+{% include 'includes/navbar2.html' %}
 
 {% block body %}
 {% endblock body %}
