--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -30,7 +30,7 @@
         </li>
       </ul>
       <form class="d-flex"  action="{{ url_for('search') }}" method="POST">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" name="search" type="search" placeholder="Segnatura e.g. XXVIII (26)" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
