--- a/templates/risultati.html
+++ b/templates/risultati.html
@@ -10,7 +10,7 @@
                   <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Descrizione</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                  <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#Fac-similes" role="tab" aria-controls="Fac-similes" aria-selected="false">Fac-similes</a>
                 </li>
                 <li class="nav-item" role="presentation">
                   <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
@@ -41,8 +41,13 @@
             {% endfor %}
         
             </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <tr><td><b>Segnatura: </b></td><td>placehoder</td></tr>
+    <div class="tab-pane fade" id="Fac-similes" role="tabpanel" aria-labelledby="profile-tab">
+        <table>
+        <tr>
+        <tr><td><b>Tipologia:</b></td><td>Copia digitale</td></tr>
+        <tr><td><b>Manifest:</b></td><td> <a href=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json>http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json</a></td></tr>
+        <tr><td><b>Visualizzazione:</b></td><td> <a href=http://lezioni.meneghetti.univr.it:8085/?manifest=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json>Universal viewer</a> </td></tr>
+    </table>
     </div>
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
   </div>
