--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -48,7 +48,7 @@
             <table>
             <tr>
             <tr><td><b>Tipologia:</b></td><td>Copia digitale</td></tr>
-            <tr><td><b>Manifest:</b></td><td> <a href=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json>http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json</a></td></tr>
+            <tr><td><b>Manifest:</b></td><td> <a href=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json target="_blank">http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json</a></td></tr>
             <tr><td><b>Visualizzazione:</b></td><td> <a href=http://lezioni.meneghetti.univr.it:8085/?manifest=http://lezioni.meneghetti.univr.it//manifests/e818fc3783fb461f156dae89b25140e0.json target="_blank">Universal viewer</a> </td></tr>
         </table>
         </div>
