Immagine dorso mostrata con table

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -3,11 +3,13 @@
 
 <br>
 <div class="container">
-    <div class="row">
-      <div class="col-md-auto text-center">
+    <table>
+      <tr>
+      <td>
         <img src="http://lezioni.meneghetti.univr.it//imageapi/LXI/m0061_0visn20_0000a2.jp2/1312,104,1904,7776/90,/180/default.jpg" class="rounded mx-auto d-block" >
-      </div>
-      <div class="col-6">
+      </td>
+      <td>
+
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Descrizione</a>
@@ -53,9 +55,11 @@
         </table>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
-    </div>
-    </div>
+            
+      </td>
+      </tr>
+  </table>
 </div>
-</div>
+
 
 {% endblock body %}
