IIIF icon drag end drop background color

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,11 +11,11 @@
 <title>Biblioteca Capitolare</title>
 
 
-<style>
-body {
-  background-image: url('../css/sfondo_opaco.png');
-}
+
+<style type="text/css">
+   body { background: #f3f1ef !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
 </style>
+
 </head>
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
