--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -26,7 +26,7 @@
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
             
             {% for index, field in descrizione.iterrows() %}
-        <span class="fs-18">
+        <span style="font-family: verdana; font-size: 12px;">
         <table>
            <tr>
             <tr><td><b>Segnatura: </b></td><td>{{field.Segnatura}}</td></tr>
