--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -5,12 +5,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Esplora</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="/ricerca">Search </a>
+            <a class="nav-link" href="/ricerca">Ricerca</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/about">About</a>
@@ -31,7 +31,7 @@
       </ul>
       <form class="d-flex"  action="{{ url_for('search') }}" method="POST">
         <input class="form-control me-2" name="search" type="search" placeholder="Segnatura e.g. XXVIII (26)" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success" type="submit">Vai</button>
       </form>
     </div>
   </div>
