--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,17 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <link href={{ url_for("static",filename="custom.css") }} rel="stylesheet" type="text/css" >
 <title>Biblioteca Capitolare</title>
 
 
 
-<style type="text/css">
-   body { background: #f3f1ef !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
-</style>
+
 
 </head>
 <!--         NAVBAR        -->
