--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav id="navbarCapi" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Capitolar-<b>e</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
           <a class="nav-link active" aria-current="page" href="#">About</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/esplora">Esplora</a>
+          <a class="nav-link" href="#esplora" data-target="#esplora">Esplora</a>
       <li class="nav-item dropdown">
         <li class="nav-item active">
-            <a class="nav-link" href="/ricerca">Ricerca</a>
+            <a class="nav-link" href="//ricerca/#ricerca" data-target="#ricerca">Ricerca</a>
           </li>
           
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,7 +31,7 @@
         </li>
       </ul>
       <form class="d-flex"  action="{{ url_for('search') }}" method="POST">
-        <input class="form-control me-2" name="search" type="search" placeholder="Segnatura e.g. XXVIII (26)" aria-label="Search">
+        <input class="form-control me-2" data-target="#vai" name="search" type="search" placeholder="Segnatura e.g. XXVIII (26)" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Vai</button>
       </form>
     </div>
