--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 
 </div>
 
-
+<div>
 <section class="about  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12 w-50">
@@ -102,7 +102,7 @@
 </section>
 
 
-<section class="esplora  py-5 ">
+<section id="esplora" class="esplora  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="img col-lg-6 col-md-12 col-12 w-50">
       <img class="img-fluid" src={{url_for('static',filename='imgs/logounivr.svg')}}>
@@ -142,5 +142,5 @@
   </div>
 
 </section>
-
+</div>
 {% endblock body %}
