--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,16 +7,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href={{ url_for("static",filename="custom.css") }} rel="stylesheet" type="text/css" >
-<title>Biblioteca Capitolare</title>
-
-
-
-
-
-</head>
+  <title>Biblioteca Capitolare</title>
+  </head>
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
-
+<body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="0" tabindex="0">
 {% block body %}
 {% endblock body %}
 
@@ -24,5 +19,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     
-</body>
+  </body>
 </html>
