--- a/templates/index.html
+++ b/templates/index.html
@@ -81,15 +81,15 @@
 </div>
 
 <div>
-<section class="about  py-5 ">
+<section id="about" class="about  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12 w-50">
       <h6>IL PROGETTO</h6>
       <h1>Insieme per proteggere, digitalizzare e valorizzare</h1>
-      <p> In convenzione con la Fondazione Biblioteca Capitoalre il laboratorio LaMeDan
-        dell'Università di Verona ha iniziato una campagna di digitalizzazione e valorizzazione
+      <p> Il laboratorio LaMeDan dell'Università di Verona in convenzione con la Fondazione Biblioteca Capitoalre
+        ha iniziato una campagna di digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
-        In questo sito ospita la digital-library del progetto.</p>
+        Questo sito ospita le risorse digitali del progetto.</p>
 
 
     </div>
@@ -124,7 +124,7 @@
 
 </section>
 
-<section class="about  py-5 ">
+<section id="vai" class="about  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12 w-50">
       <h6>PER GLI STUDIOSI</h6>
@@ -136,9 +136,31 @@
 
     </div>
     <div class="img col-lg-6 col-md-12 col-12 w-50">
+      <img class="img-fluid" src={{url_for('static',filename='imgs/tutorial.gif')}}>
+      
+    </div>
+  </div>
+
+</section>
+
+<section id="ricerca" class="esplora  py-5 ">
+  <div class="row align-items-center container py-5 mx-auto">
+    <div class="img col-lg-6 col-md-12 col-12 w-50">
       <img class="img-fluid" src={{url_for('static',filename='imgs/logounivr.svg')}}>
       
     </div>
+    <div class="text col-lg-6 col-md-12 col-12 w-50">
+      <h6>ESPLORA</h6>
+      <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
+      <p>Il prgetto prevede la collaborazione con il dipartimento di Informatica 
+        dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezzione.
+        Oltre ad una catalogazione approfondita dei beni contenuti.
+
+      </p>
+
+
+    </div>
+    
   </div>
 
 </section>
