--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,43 @@
 {% extends 'layout.html' %}
 {% block  body%}
 
-<!--        SLIDE   https://source.unsplash.com/1600x900/?nature  https://source.unsplash.com/1600x900/?weekly   https://source.unsplash.com/1600x900/?buildings  --> 
-
-<div class="container">
-
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
-
-
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
   </ol>
-
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../static/imgs/sala.jpeg" class="d-block w-100" alt="">
+    <div class="carousel-item active" data-bs-interval="5000">
+      <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <h5>La biblioteca Capitolare di Verona.</h5>
+        <p>La regina delle biblioteche eclesiastiche.</p>
       </div>
     </div>
-
-    <div class="carousel-item">
-      <img src="../static/imgs/books.png" class="d-block w-100" alt="">
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src={{url_for('static',filename='imgs/2.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>Digitalizzazione dei beni librari.</h5>
+        <p>Digitalizazioni fino a 100 Mega Pixel, per preservare ogni minimo dettaglio.</p>
       </div>
     </div>
-
-    <div class="carousel-item">
-      <img src="../static/imgs/mss_rid.png" class="d-block w-100" alt="">
+    <div class="carousel-item" data-bs-interval="5000">
+      <img src={{url_for('static',filename='imgs/3.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>Restituire il perduto.</h5>
+        <p>Tecniche di imaging avanzato per leggere quello che l'occhio non può più leggere..</p>
       </div>
     </div>
-
-    <div class="carousel-item">
-      <img src="../static/imgs/sala_sx.jpeg" class="d-block w-100" alt="">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-    </div>
-
-    <div class="carousel-item">
-      <img src="../static/imgs/chiosco.jpg" class="d-block w-100" alt="">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-      </div>
-    </div>
-
-    <div class="carousel-item">
-      <img src="../static/imgs/esterno.png" class="d-block w-100" alt="">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-      </div>
-    </div>
-
   </div>
-
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="visually-hidden">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span class="visually-hidden">Next</span>
   </a>
-</div>
-
 </div>
 
 <div>
@@ -109,7 +69,7 @@
       
     </div>
     <div class="text col-lg-6 col-md-12 col-12 w-50">
-      <h6>ESPLORA</h6>
+      <h6>VISUALIZZA I DATI SULLA COLLEZZIONE</h6>
       <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
       <p>Il prgetto prevede la collaborazione con il dipartimento di Informatica 
         dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezzione.
@@ -124,7 +84,7 @@
 
 </section>
 
-<section id="vai" class="about  py-5 ">
+<section id="vai" class="vari  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12 w-50">
       <h6>PER GLI STUDIOSI</h6>
