--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>La biblioteca Capitolare di Verona.</h5>
-        <p>La regina delle biblioteche eclesiastiche.</p>
+        <p>La "regina delle biblioteche eclesiastiche".</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="5000">
@@ -26,7 +26,7 @@
       <img src={{url_for('static',filename='imgs/3.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Restituire il perduto.</h5>
-        <p>Tecniche di imaging avanzato per leggere quello che l'occhio non può più leggere..</p>
+        <p>Tecniche di imaging avanzato per leggere i testi non più leggibili.</p>
       </div>
     </div>
   </div>
@@ -64,22 +64,18 @@
 
 <section id="esplora" class="esplora  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
-    <div class="img col-lg-6 col-md-12 col-12 w-50">
-      <img class="img-fluid" src={{url_for('static',filename='imgs/logounivr.svg')}}>
-      
-    </div>
+
     <div class="text col-lg-6 col-md-12 col-12 w-50">
       <h6>VISUALIZZA I DATI SULLA COLLEZZIONE</h6>
       <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
-      <p>Il prgetto prevede la collaborazione con il dipartimento di Informatica 
+      <p>Oltre ad una catalogazione approfondita dei beni contenuti, il prgetto prevede la collaborazione con il dipartimento di Informatica 
         dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezzione.
-        Oltre ad una catalogazione approfondita dei beni contenuti.
-
       </p>
-
-
     </div>
     
+        <div class="img col-lg-6 col-md-12 col-12 w-50">
+      <script src={{url_for('static',filename="plotbib.js")}} id="6b9e92e7-4d69-4301-a924-c04fd2d341f7"></script>      
+    </div>
   </div>
 
 </section>
@@ -90,7 +86,7 @@
       <h6>PER GLI STUDIOSI</h6>
       <h1>Sai già cosa stai cercando?</h1>
       <p>Se sai già la segnatura del codice che stai cercando inseriscila sul
-        campo segnatura e vai direttamente allo studio!
+        campo segnatura e vai direttamente al bene che stai studiando! <i>Lege feliciter!</i>
       </p>
 
 
