--- a/templates/index2.html
+++ b/templates/index2.html
@@ -12,7 +12,7 @@
       <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>La biblioteca Capitolare di Verona.</h5>
-        <p>La biblioteca Capitolare di Verona ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dopo Cristo.</p>
+        <p>La biblioteca ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dopo Cristo.</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="5000">
@@ -62,13 +62,13 @@
 
 
 <section id="esplora" class="esplora  py-5 ">
-  <div class="row align-items-center container py-5 mx-auto">
+  <div class="row  align-items-center container py-5 mx-auto">
 
-    <div class="img col-lg-6 col-md-12 col-12">
+    <div class="img col-lg-6 col-md-12 col-12 ">
         <script src={{url_for('static',filename="plotbib.js")}} id="6b9e92e7-4d69-4301-a924-c04fd2d341f7"></script>      
     </div>
 
-    <div class="text col-lg-6 col-md-12 col-12">
+    <div class="text col-lg-6 col-md-12 order-first col-12">
       <h6>VISUALIZZA I DATI SULLA COLLEZZIONE</h6>
       <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
       <p>Oltre ad una catalogazione approfondita dei beni contenuti, il prgetto prevede la collaborazione con il dipartimento di Informatica 
@@ -100,7 +100,7 @@
 
 </section>
 
-<section id="ricerca" class="esplora  py-5 ">
+<section id="ricerca" class="ricerca  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="img col-lg-6 col-md-12 col-12">
       <img class="img-fluid" src={{url_for('static',filename='imgs/logounivr.svg')}}>
