Nuova versione dei risultati

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -3,6 +3,8 @@
 
 <br>
 <div class="container">
+  <h3  class='text-center'>{{segnatura.split(' ')[0]}} <small class="text-muted">{{" ".join(segnatura.split(' ')[1:])}}</small></h3>
+  <img src="http://lezioni.meneghetti.univr.it//imageapi/LXI/m0061_0visn20_0009a2.jp2/pct:2,18,80,7/800,/0/default.jpg" class="img-fluid rounded mb5">
     <table class="table">
       <tr>
       <td style="width:  2.33%">
