Cambiato font svg

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -19,7 +19,7 @@
       <img src={{url_for('static',filename='imgs/2.jpeg')}} class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Digitalizzazione dei beni librari.</h5>
-        <p>Digitalizazioni fino a 100 Mega Pixel, per preservare ogni minimo dettaglio.</p>
+        <p>Digitalizazioni con camere fino a 100 Mega Pixel, per preservare ogni minimo dettaglio.</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="5000">
