--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,7 +20,7 @@
                     <ul class="pages">
                         <li><a href="#">come funziona</a></li>
                         <li><a href="#">iniziative collegate</a></li>
-                        <li><a href="#">Sotto-progetti</a></li>
+                        <li><a href="/progetti">progetti</a></li>
                         <li><a href="#">Linee guida</a></li>
                         <li><a href="#">Open data (OAI, ARK ...)</a></li>
                         <li><a href="#">credits</a></li>
