--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,32 @@
 {% extends 'layout.html' %}
 {% block  body%}
-
-
-<div align="center">
- <h1> <font face="Adobe Song Std L"><b>About biblioteca Capitolare</b></font></h1>
-
+<section class="container">
 <br>
-</div>
+<h3>Scopo</h3>
+<p>Questo sito contiene i contenuti digitali riguardanti la Biblioteca capitolare 
+di Verona raccolti e curati dall'Università di Verona. In questo portale è possibile accedere a dati relativi alla catalogazione dei beni librari ed alle digitalizzazioni dei manoscritti.
+</p>
+Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare,
+vi invitiamo a consultare <a href="http://bibliotecacapitolare.org/">il sito ufficiale della biblioteca Capitolare di Verona.</a>. 
 
+<h3>Storia del progetto</h3>
+<p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a> facente parte
+ dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
+Questo portale è nato durante il  progetto DascabiDa per raccogliere e rendere accessibili il materiale digitalizzato
+durante il progetto e formare la base per i progetti futuri. Il 19 Marzo 2019 l'Università di Verona ha firmato una convenzione 
+con la biblioteca Capitolare di Verona per affiancarla nella gestione e valorizzazione dei beni culturali contenuti al suo intero. 
+
+   </p>
+</section>
+<section class="container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="bd-example">
+    <p class="text-justify"> Il progetto DascabiDa ha dato vità al laboratorio LaMeDan ed alla convenzione tra la Fondazione Biblioteca Capitolare di Veorna
+        e l'Università di Verona. In coincidenza con gli anniversari danteschi (2015 e 2021) della nascita e della morte del poeta, il progetto si prefigge di studiare e digitalizzare
+        diversi codici contenuti all'interno della biblioteca.  Dante, che soggiornò a Verona tra il 1303-1304 ed il 1312-1320, potrebbe avere lasciato alcune annotazioni
+        nei margini di alcuni manoscritti della biblioteca capitolare.
+    </p>
+</div>
+</section>
 
 {% endblock body %}
